added ACM as publisher

--- a/callResearchs.html
+++ b/callResearchs.html
@@ -325,7 +325,9 @@
 						<p>
 							The review process is single-blind: the reviewers are not identified, while author names are listed in the submission.
 						</p>
-						
+						<p>
+							All accepted papers will be published in the SSTD 2025 proceedings by ACM.
+						</p>
 						<p>
 							The fair use of AI tools is permitted and must comply with the ACM policies regarding AI
 							tools
