--- a/index.html
+++ b/index.html
@@ -82,7 +82,10 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 						<h2 style="font-weight: bold;">About</h2>
 						<section>
 							<p>
-								The <span style="font-weight: bold;">International Symposium on Spatial and Temporal Data (SSTD)</span> has a long and distinguished history as a premier forum for researchers, practitioners, and industry leaders to present and discuss spatial and temporal data management innovations. Since its inception in 1989, SSTD has been at the forefront of advancing foundational theories, systems, and applications that address the challenges of handling spatial and temporal information. Over the years, the symposium has played a pivotal role in fostering research that has shaped the evolution of spatial databases, geospatial computing, and spatio-temporal analytics. The <span style="font-weight: bold;">19th edition</span> of SSTD continues this tradition while broadening its focus to explore the full lifecycle of spatial and temporal data, reflecting the growing importance of these data types in an era of big data, AI, and ubiquitous computing.
+								The <span style="font-weight: bold;">International Symposium on Spatial and Temporal Data (SSTD)</span> has a long and distinguished history as a premier forum for researchers, practitioners, and industry leaders to present and discuss spatial and temporal data management innovations. Since its inception in 1989, SSTD has been at the forefront of advancing foundational theories, systems, and applications that address the challenges of handling spatial and temporal information. Over the years, the symposium has played a pivotal role in fostering research that has shaped the evolution of spatial databases, geospatial computing, and spatio-temporal analytics. <span style="font-weight: bold;">The 19th edition of SSTD </span> continues this tradition while broadening its focus to explore the full lifecycle of spatial and temporal data, reflecting the growing importance of these data types in an era of big data, AI, and ubiquitous computing.
+							</p>
+							<p>
+								All accepted papers will be published in the SSTD 2025 proceedings by ACM.
 							</p>
 						</section>
 					</div>
