Geoinformatica special issue

--- a/callResearchs.html
+++ b/callResearchs.html
@@ -105,6 +105,7 @@
 							particular, novel but significant proposals will be considered for acceptance to this
 							category despite not having gone
 							through extensive experimental validation or lacking a strong theoretical foundation.
+
 						</p>
 					</div>
 
@@ -285,6 +286,20 @@
 	   </div>
 	</section>
 	<!-- Instructions -->
+	<section id="dates" class="main" >
+	   <header>
+	       <div class="container">
+	           <h2>Geoinformatica Special Issue</h2>
+	       </div>
+	   </header>
+	   <div class="content style4">
+	       <div class="container">
+	               <div class="col-12 col-12-narrow">
+	                 Outstanding research papers will be selected for an extended journal submission to a special track of   <span style="font-weight: bold;">"SSTD 2025 Best Papers"</span> in GeoInformatica (Springer).
+	           </div>
+	       </div>
+	   </div>
+	</section>
 	<section id="instructions" class="main">
 		<header>
 			<div class="container">
