--- a/index.html
+++ b/index.html
@@ -141,6 +141,8 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 				<div class="row">
 					<div class="col-5 col-12">
 						<ul>
+							<li>(14.05.2025) Outstanding research papers will be selected for an extended journal submission to a special track of <span style="font-weight: bold;">"SSTD 2025 Best Papers"</span> in GeoInformatica (Springer)
+							</li>
 							<li>(06.05.2025) Extended the submission deadline for <a href="./callThesis.html">Thesis and Dissertation Workshop track</a>: <span style="font-weight: bold;">June 1, 2025</span> (AoE)</li>
 							<li>(28.04.2025) Extended the submission deadline for <a href="./callResearchs.html">research / demo / industry tracks</a>. Abstract: <span style="font-weight: bold;">May 11, 2025</span> (AoE); Paper: <span style="font-weight: bold;">May 18, 2025</span> (AoE)</li>
 							<li>(03.02.2025) Updated the <a href="./callTutorials.html">Call for Tutorial Proposal.</a></li>
