Add LY Corporation sponsor logo to index.html
- Create new Sponsors section with the same header style as News section
- Place Sponsors section below News section
- Add LY_Corporation_Wordmark_Black_RGB.png logo with appropriate styling
- Ensure logo meets display guidelines (min-height, margins, centered)
- Add responsive styling for mobile devices

--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<link rel="shortcut icon" href="./images/favicon.ico" />
+	<style>
+		/* Mobile-specific styles for sponsor logos */
+		@media screen and (max-width: 736px) {
+			.sponsor-logos img {
+				min-height: 30px !important;
+			}
+		}
+	</style>
 </head>
 
 <body class="is-preload">
@@ -152,6 +160,26 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 							<li>(15.01.2025) Updated the <a href="./callResearchs.html">Call for papers</a>.</li>
 							<li>(06.12.2024) The website for SSTD'25 is up and running.</li>
 						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<!-- Sponsors -->
+	<section id="sponsors" class="main">
+		<header>
+			<div class="container">
+				<h2>Sponsors</h2>
+			</div>
+		</header>
+		<div class="content style4">
+			<div class="container">
+				<div class="row">
+					<div class="col-12" style="text-align: center;">
+						<div class="sponsor-logos">
+							<img src="images/LY_Corporation_Wordmark_Black_RGB.png" alt="LY Corporation" style="max-width: 300px; min-height: 15px; margin: 20px auto; display: block;">
+						</div>
 					</div>
 				</div>
 			</div>
