--- a/index.html
+++ b/index.html
@@ -178,7 +178,9 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 				<div class="row">
 					<div class="col-12" style="text-align: center;">
 						<div class="sponsor-logos">
-							<img src="images/LY_Corporation_Wordmark_Black_RGB.png" alt="LY Corporation" style="max-width: 300px; min-height: 15px; margin: 20px auto; display: block;">
+							<a href="https://www.lycorp.co.jp/en/" target="_blank" rel="noopener noreferrer">
+								<img src="images/LY_Corporation_Wordmark_Black_RGB.png" alt="LY Corporation" style="max-width: 300px; min-height: 15px; margin: 20px auto; display: block;">
+							</a>
 						</div>
 					</div>
 				</div>
