--- a/officers.html
+++ b/officers.html
@@ -290,6 +290,7 @@ Wei-Shinn Ku (Auburn University) <br>
 Yannis Theodoridis (University of Piraeus) <br>
 Yaron Kanza (AT&T Labs-Research) <br>
 Yoshiharu Ishikawa (Nagoya University) <br>
+Yunfan Kang (University of Illinois at Urbana Champaign)<br>
 Yunjun Gao (Zhejiang University) <br>
 
 										</p>
