--- a/callThesis.html
+++ b/callThesis.html
@@ -189,7 +189,7 @@ Submissions will be evaluated based on the research stage: papers from early-sta
 							required double-column format.
 						</p>
 						<p>
-							Submissions cannot have been or be submitted to another venue while being reviewed at SSTD and must have significant new content compared to previous publications.
+							Submissions must not have been submitted to, or be under review at, another venue while under review at SSTD. They must also be based on the authors' Ph.D. work and clearly highlight the novelty of the contribution compared to the state of the art.
 						</p>
 						<p>
 							The review process is single-blind: the reviewers are not identified, while author names are listed in the submission.
