--- a/index.html
+++ b/index.html
@@ -112,6 +112,10 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 										<td><s>May 4, 2025</s><br> May 18, 2025</td>
 									</tr>
 									<tr style="border-top: 1px solid #ccc;">
+										<td>Thesis and Dissertation Workshop track submission deadline </td>
+										<td>June 7, 2025</td>
+									</tr>
+									<tr style="border-top: 1px solid #ccc;">
 										<td>Notification date</td>
 										<td>July 1, 2025</td>
 									</tr>
@@ -149,9 +153,10 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 				<div class="row">
 					<div class="col-5 col-12">
 						<ul>
+							<li>(30.05.2025) Extended the submission deadline for <a href="./callThesis.html">Thesis and Dissertation Workshop track</a>: <span style="font-weight: bold;">June 7, 2025</span> (AoE)</li>
 							<li>(14.05.2025) Outstanding research papers will be selected for an extended journal submission to a special track of <span style="font-weight: bold;">"SSTD 2025 Best Papers"</span> in GeoInformatica (Springer)
 							</li>
-							<li>(06.05.2025) Extended the submission deadline for <a href="./callThesis.html">Thesis and Dissertation Workshop track</a>: <span style="font-weight: bold;">June 1, 2025</span> (AoE)</li>
+							<!--<li>(06.05.2025) Extended the submission deadline for <a href="./callThesis.html">Thesis and Dissertation Workshop track</a>: <span style="font-weight: bold;">June 1, 2025</span> (AoE)</li>-->
 							<li>(28.04.2025) Extended the submission deadline for <a href="./callResearchs.html">research / demo / industry tracks</a>. Abstract: <span style="font-weight: bold;">May 11, 2025</span> (AoE); Paper: <span style="font-weight: bold;">May 18, 2025</span> (AoE)</li>
 							<li>(03.02.2025) Updated the <a href="./callTutorials.html">Call for Tutorial Proposal.</a></li>
 							<li>(03.02.2025) Updated the <a href="./callThesis.html">Call for Thesis and Dissertation Workshop Track Papers.</a></li>
