--- a/visa.html
+++ b/visa.html
@@ -123,8 +123,9 @@
 											<li>Hiroki Kudo (Kyoto Tachibana University, Japan)<br>
 											yoshikawa-h [at] tachibana-u.ac.jp</li>
 										</ul>
+										<h4>Invitation Letter</h4>
 										<p>
-											Detailed information about invitation letters for visa applications will be available after registration opens.
+											In case you need an Invitation letter for visa application procedure from the local organizers, please contact SSTD2025 Secretariat c/o Kadinche Corporation (<a href="mailto:sstd2025@kadinche.com">sstd2025@kadinche.com</a>). We will then provide you with a complementary document from the Japan organizers for the Japanese Embassy or Consulate.
 										</p>
 										<!--
 										<p>
