demo industry tracks accepted

--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 				<div class="row">
 					<div class="col-5 col-12">
 						<ul>
+							<li>(24.06.2025) Accepted papers for the Industry and Demo Tracks are now available: <a href="./program.html#accepted">Accepted paper</a></li>
 							<li>(30.05.2025) Extended the submission deadline for <a href="./callThesis.html">Thesis and Dissertation Workshop track</a>: <span style="font-weight: bold;">June 7, 2025</span> (AoE)</li>
 							<li>(14.05.2025) Outstanding research papers will be selected for an extended journal submission to a special track of <span style="font-weight: bold;">"SSTD 2025 Best Papers"</span> in GeoInformatica (Springer)
 							</li>
