--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 	<title>SSTD 2025</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<link rel="stylesheet" href="assets/css/main.css" />
+	<link rel="stylesheet" href="assets/css/main.css?v=1.2" />
 	<link rel="shortcut icon" href="./images/favicon.ico" />
 	<style>
 		/* Mobile-specific styles for sponsor logos */
