thesis and dissertation track

--- a/officers.html
+++ b/officers.html
@@ -294,6 +294,7 @@ Yunfan Kang (University of Illinois at Urbana Champaign)<br>
 Yunjun Gao (Zhejiang University) <br>
 
 										</p>
+										<br>
                                         <h4>Industry and Demo Track</h4>
                                         <p>
 																				
@@ -309,7 +310,18 @@ Shizhe Zhao (Shanghai Jiao Tong University) <br>
 Tanzima Hashem (Bangladesh University of Engineering and Technology) <br>
 Tenindra Abeywickrama  (Riken Research Institute, Japan) <br>
 										</p>
-              
+										<br>
+              <h4>Thesis and Dissertation Track</h4>
+Baihua Zheng (Singapore Management University)<br>
+Chiara Renso (ISTI-CNR, Pisa, Italy)<br>
+Christine Bassem (Wellesley College)<br>
+Cyril Ray (Ecole Navale)<br>
+Fatme Hachem (Università degli studi di Milano)<br>
+Francesco Lettich (ISTI-CNR, Pisa, Italy)<br>
+Giuliano Cornacchia (ISTI-CNR, Pisa, Italy)<br>
+Karine Zeitouni (Université de Versailles-St-Quentin)<br>
+Yannis Theodoridis (University of Piraeus)<br>
+                                        <p>
                                     </section>
                                 </div>
                             </div>
