--- a/program.html
+++ b/program.html
@@ -170,7 +170,27 @@ Xie is a Fellow of the ACM, IEEE, and China Computer Federation.
 					<div class="row">
 						<div class="col-12 col-12-narrow">
 							<section>
-								
+								<header><h3>Research Track (Long Paper)</h3></header>
+
+								<p><ul><li><h5 class="paper-title">Top-k Range Search on Weighted Interval Data</h5> Daichi Amagata (Osaka University)*; Jimin Lee (The University of Osaka)</li></ul></p>
+<p><ul><li><h5 class="paper-title">Physics-Informed Neural Networks for Vessel Trajectory Prediction: Learning Time-Discretized Kinematic Dynamics via Finite Differences</h5>Gabriel Spadon (Dalhousie University)*; Md Mahbub Alam (Dalhousie University); José F. Rodrigues-Jr (University of Sao Paulo); Amilcar Soares-Jr (Linnaeus University)</li></ul></p>
+<p><ul><li><h5 class="paper-title">SNC: A Framework for Verification and Generation of Spatial NLQ Corpora</h5>Weijia Yi (Nanjing University of Aeronautics and Astronautics); Xieyang Wang (Nanjing University of Aeronautics and Astronautics); Mengyi Liu (Nanjing University of Aeronautics and Astronautics); Jianqiu Xu (Nanjing University of Aeronautics and Astronautics)*; Zhifeng Bao (RMIT University)</li></ul></p>
+<p><ul><li><h5 class="paper-title">Generalized Origin-Destination-Time Flow Patterns</h5>Chrysanthi Kosyfaki (The University of Hong Kong )*; Nikos Mamoulis (University of Ioannina); Reynold Cheng (The University of Hong Kong); Ben Kao (The University of Hong Kong)</li></ul></p>
+<p><ul><li><h5 class="paper-title">The Batch Insertion Operator for Shared Mobility Route Planning on Time-Dependent Road Networks</h5>Aaditya Mukherjee (University of Victoria); Sean Chester (University of Victoria)*; Mario Nascimento (Northeastern University)</li></ul></p>
+<p><ul><li><h5 class="paper-title">ReefsDB: An Efficient Design and Implementation of Time-Series Store on SSDs</h5>Shuai Liu (The Institute of Software, Chinese Academy of Sciences (ISCAS)); Ying Qiao (The Institute of Software, Chinese Academy of Sciences (ISCAS))*; Chang Leng (The Institute of Software, Chinese Academy of Sciences (ISCAS)); Hongan Wang (The Institute of Software, Chinese Academy of Sciences (ISCAS))</li></ul></p>
+<p><ul><li><h5 class="paper-title">A Multi-Modal Knowledge-Enhanced Framework for Vessel Trajectory Prediction</h5>Haomin Yu (Aalborg University); Tianyi Li (Aalborg University)*; Kristian Torp (Aalborg University); Christian S. Jensen (Aalborg University)</li></ul></p>
+<p><ul><li><h5 class="paper-title">TIDE: Indexing Time Intervals by Duration and Endpoint</h5>Kai Wang (HKUST); Moin Moti (HKUST); Dimitris Papadias (HKUST)*</li></ul></p>
+<p><ul><li><h5 class="paper-title">Private Next Location Prediction using Transformers: Enhancing Accuracy under Differential Privacy Constraints</h5>Andrei Ouatu (Politehnica University Bucharest); Gabriel Ghinita (Hamad Bin Khalifa University)*; Razvan Rughinis (Politehnica University Bucharest)</li></ul></p>
+<p><ul><li><h5 class="paper-title">Multivariate Tests for Point and Probabilistic Forecasts, with an Application to Spatio-temporal Weather Forecast Evaluation</h5>Annette Jing (Stanford University)*; Phillip Jang (Amazon)</li></ul></p>
+<p><ul><li><h5 class="paper-title">BRkNN-light: Batch Processing of Reverse k-Nearest Neighbor Queries for Moving Objects on Road Networks</h5>Anbang Song (Yantai University)*; Ziqiang Yu (Yantai University); Wei Liu (Yantai University); Yating Xu (Yantai University); Mingjin Tao (Yantai University)</li></ul></p>
+<p><ul><li><h5 class="paper-title">ImPORTance - Machine Learning-Driven Analysis of Global Port Significance and Network Dynamics for Improved Operational Efficiency</h5>Emanuele Carlini (ISTI/CNR); Domenico Di Gangi (ISTI/CNR); Vinicius Monteiro de Lira (UFC); Hanna Kavalionak (ISTI/CNR); Amilcar Soares (Linnaeus University); Gabriel Spadon (Dalhousie University)*</li></ul></p>
+<p><ul><li><h5 class="paper-title">Scalable Processing of Moving Flock Patterns</h5>Andres Oswaldo Calderon Romero (Pontificia Universidad Javeriana)*; Vassilis J. Tsotras (University of California); Petko Balakov (Esri); Marcos Vieira (Google)</li></ul></p>
+<header><h3>Research Track (Short Paper)</h3></header>
+<p><ul><li><h5 class="paper-title">Comprehending Spatio-temporal Data via Cinematic Storytelling using Large Language Models [short paper]</h5>Panos Kalnis (King Abdullah University of Science and Technology)*; Shuo Shang (University of Electronic Science and Technology of China); Christian Jensen (Aalborg University)</li></ul></p>
+<p><ul><li><h5 class="paper-title">Hadath: Built-In System Support for Event Detection Queries</h5>Rami Alghamdi (University of Minnesota, Twin Cities)*; Thamir Qadah (Umm Al-Qura University); Mohamed Mokbel (University of Minnesota, Twin Cities)</li></ul></p>
+<p><ul><li><h5 class="paper-title">Discovering Super-Colocation Patterns: A Summary of Results</h5>Shuai An (University of Minnesota)*; Shesha Sai Kumar Reddy Sadu (University of Minnesota); Arun Sharma (University of Minnesota); Majid Farhadloo (University of Minnesota); Shashi Shekhar (University of Minnesota)</li></ul></p>
+<p><ul><li><h5 class="paper-title">Distributed Community Detection in Temporal Graphs</h5>Konstantinos Christopoulos (University of Patras)*; Konstantinos Tsichlas (University of Patras)</li></ul></p>
+
 			            		<header><h3>Industry Track</h3></header>
 			            		<p>
 			            		<ul>
