--- a/program.html
+++ b/program.html
@@ -82,14 +82,14 @@
 			</header>
 			<div class="content style4">
 				<div class="container">
-				<div class="container content style4" style="padding-top: 4em;">
+			
 				<div class="row">
-						<div class="col-3 col-12-narrow">
-							<section>
-								<img src="images/keynote-yamaguchi-2024.jpg" style="width:100%; margin-top:10px; margin-bottom:12px;">
+						<div class="col-2 col-12-narrow">
+							<section style="text-align: center;">
+								<img src="images/keynote-yamaguchi-2024.jpg" style="width:100%; max-width: 300px; margin-top:10px; margin-bottom:12px;">
 							</section>
 						</div>
-						<div class="col-9 col-12-narrow">
+						<div class="col-10 col-12-narrow">
 							<section>
 								<h3>Keynote 1 &ndash; Hirozumi Yamaguchi (Osaka University)</h3>
 									<p align="justify">
@@ -115,17 +115,17 @@ has also been serving concurrently as the team leader for RIKEN R-CCS's
 large-scale digital twin research team.
 									</p> 
 							</section>
-						</div>
+
 					</div>
 					</div>
 				<div class="container content style4" style="padding-top: 4em;">
 					<div class="row">
-						<div class="col-3 col-12-narrow">
-							<section>
-								<img src="images/keynote-xingxie.jpg" style="width:100%; margin-top:10px; margin-bottom:12px;">
+						<div class="col-2 col-12-narrow">
+							<section style="text-align: center;">
+								 <img src="images/keynote-xingxie.jpg" style="width:100%; max-width: 300px; margin-top:10px; margin-bottom:12px;">
 							</section>
 						</div>
-						<div class="col-9 col-12-narrow">
+						<div class="col-10 col-12-narrow">
 							<section>
 								<h3>Keynote 2 &ndash; Xing XIE (Microsoft Research Asia)</h3>
 									<p align="justify">
