udpate registration draft

--- a/registration-draft.html
+++ b/registration-draft.html
@@ -90,11 +90,6 @@
 												</thead>
 												<tbody>
 													<tr>
-														<td style="border: 1px solid #ddd; padding: 12px;">Professional (Author)</td>
-														<td style="border: 1px solid #ddd; padding: 12px; text-align: center;">JPY 100,000</td>
-														<td style="border: 1px solid #ddd; padding: 12px; text-align: center;">JPY 110,000</td>
-													</tr>
-													<tr>
 														<td style="border: 1px solid #ddd; padding: 12px;">Student</td>
 														<td style="border: 1px solid #ddd; padding: 12px; text-align: center;">JPY 60,000</td>
 														<td style="border: 1px solid #ddd; padding: 12px; text-align: center;">JPY 70,000</td>
@@ -116,7 +111,7 @@
 										<h3>Additional Items</h3>
 										<ul>
 											<li>Banquet (August 26): JPY 20,000</li>
-											<li>2025 Osaka Expo tour (August 27): JPY 10,000 (including one-way bus transportation)</li>
+											<li>2025 Osaka Expo tour (August 27): JPY 10,000</li>
 										</ul>
 										<p>
 											<span style="font-weight: bold;">Note that one banquet ticket and one expo ticket are included with the registration fee.</span>
@@ -128,7 +123,7 @@
 									<section>
 										<h3>Note for Authors</h3>
 										<p>
-											Each accepted paper (Research, Demo, Industry, Workshop, or Tutorial) must be covered by a non-student "Professional(author)" registration by one of the authors, even if presented by a student.
+											Each accepted paper (Research, Demo, Industry, Workshop, or Tutorial) must be covered by a non-student "Professional" registration by one of the authors, even if presented by a student.
 										</p>
 									</section>
 									
@@ -142,7 +137,7 @@
 									<section>
 										<h3>On-site Registration</h3>
 										<p>
-											On-site registration will be possible but only online with a valid credit card. Cash or other forms of payment will not be accepted.
+											On-site registration is possible but the participant needs to pay by credit card in an online manner. Cash or other forms of payment will not be accepted.
 										</p>
 									</section>
 									
