update registration draft, add early/late price

--- a/registration-draft.html
+++ b/registration-draft.html
@@ -83,25 +83,37 @@
 											<table style="border-collapse: collapse; width: 100%;">
 												<thead>
 													<tr>
+														<th style="border: 1px solid #ddd; padding: 12px; background-color: #f5f5f5;"></th>
 														<th style="border: 1px solid #ddd; padding: 12px; background-color: #f5f5f5;">Category</th>
-														<th style="border: 1px solid #ddd; padding: 12px; background-color: #f5f5f5;">Early<br />(Before July 15)</th>
-														<th style="border: 1px solid #ddd; padding: 12px; background-color: #f5f5f5;">Standard<br />(After July 15)</th>
+														<th style="border: 1px solid #ddd; padding: 12px; background-color: #f5f5f5;">Fee (JPY)</th>
 													</tr>
 												</thead>
 												<tbody>
 													<tr>
+														<td rowspan="2" style="border: 1px solid #ddd; padding: 12px; font-weight: bold;">Early<br />(Before July 15)</td>
 														<td style="border: 1px solid #ddd; padding: 12px;">Student</td>
-														<td style="border: 1px solid #ddd; padding: 12px; text-align: center;">JPY 60,000</td>
-														<td style="border: 1px solid #ddd; padding: 12px; text-align: center;">JPY 70,000</td>
+														<td style="border: 1px solid #ddd; padding: 12px; text-align: center;">60,000</td>
 													</tr>
 													<tr>
-														<td style="border: 1px solid #ddd; padding: 12px;">Professional</td>
-														<td style="border: 1px solid #ddd; padding: 12px; text-align: center;">JPY 110,000</td>
-														<td style="border: 1px solid #ddd; padding: 12px; text-align: center;">JPY 120,000</td>
+														<td style="border: 1px solid #ddd; padding: 12px;">Regular</td>
+														<td style="border: 1px solid #ddd; padding: 12px; text-align: center;">110,000</td>
+													</tr>
+													<tr>
+														<td rowspan="2" style="border: 1px solid #ddd; padding: 12px; font-weight: bold;">Late<br />(After July 15)</td>
+														<td style="border: 1px solid #ddd; padding: 12px;">Student</td>
+														<td style="border: 1px solid #ddd; padding: 12px; text-align: center;">70,000</td>
+													</tr>
+													<tr>
+														<td style="border: 1px solid #ddd; padding: 12px;">Regular</td>
+														<td style="border: 1px solid #ddd; padding: 12px; text-align: center;">130,000</td>
 													</tr>
 												</tbody>
 											</table>
 										</div>
+										<p>
+											Each accepted paper (Research, Demo, Industry, Workshop, or Tutorial) must be covered by <span style="font-weight: bold;">one Regular registration</span>, even if it is presented by a student.
+											Authors with <span style="font-weight: bold;">multiple accepted papers</span> must complete <span style="font-weight: bold;">a separate registration for each paper</span>.
+										</p>
 										<p>
 											<span style="font-weight: bold;">** The fees include admission to technical sessions, Welcome Reception (August 25), Lunches, Refreshments during Breaks, Banquet (August 26) and Osaka Expo tour (August 27).</span>
 										</p>
@@ -120,12 +132,6 @@
 										</p>
 									</section>
 									
-									<section>
-										<h3>Note for Authors</h3>
-										<p>
-											Each accepted paper (Research, Demo, Industry, Workshop, or Tutorial) must be covered by a non-student "Professional" registration by one of the authors, even if presented by a student.
-										</p>
-									</section>
 									
 									<section>
 										<h3>Refund/Cancellation Policy</h3>
