full regist->regular

--- a/registration-draft.html
+++ b/registration-draft.html
@@ -90,28 +90,28 @@
 												</thead>
 												<tbody>
 													<tr>
-														<td rowspan="2" style="border: 1px solid #ddd; padding: 12px; font-weight: bold;">Early<br />(Until July 15 AoE)</td>
+														<td rowspan="2" style="border: 1px solid #ddd; padding: 12px; font-weight: bold;">Early Registration<br />(Until July 15 AoE)</td>
 														<td style="border: 1px solid #ddd; padding: 12px;">Student</td>
 														<td style="border: 1px solid #ddd; padding: 12px; text-align: center;">60,000</td>
 													</tr>
 													<tr>
-														<td style="border: 1px solid #ddd; padding: 12px;">Full Registration</td>
+														<td style="border: 1px solid #ddd; padding: 12px;">Regular</td>
 														<td style="border: 1px solid #ddd; padding: 12px; text-align: center;">110,000</td>
 													</tr>
 													<tr>
-														<td rowspan="2" style="border: 1px solid #ddd; padding: 12px; font-weight: bold;">Late</td>
+														<td rowspan="2" style="border: 1px solid #ddd; padding: 12px; font-weight: bold;">Late Registration</td>
 														<td style="border: 1px solid #ddd; padding: 12px;">Student</td>
 														<td style="border: 1px solid #ddd; padding: 12px; text-align: center;">70,000</td>
 													</tr>
 													<tr>
-														<td style="border: 1px solid #ddd; padding: 12px;">Full Registration</td>
+														<td style="border: 1px solid #ddd; padding: 12px;">Regular</td>
 														<td style="border: 1px solid #ddd; padding: 12px; text-align: center;">130,000</td>
 													</tr>
 												</tbody>
 											</table>
 										</div>
 										<p>
-											Each accepted paper (Research, Demo, Industry, Workshop, or Tutorial) must be covered by <span style="font-weight: bold;">one Full Registration</span>, even if it is presented by a student.
+											Each accepted paper (Research, Demo, Industry, Workshop, or Tutorial) must be covered by <span style="font-weight: bold;">one Regular registration</span>, even if it is presented by a student.
 											Authors with <span style="font-weight: bold;">multiple accepted papers</span> must complete <span style="font-weight: bold;">a separate registration for each paper</span>.
 										</p>
 										<p>
