workshop->Thesis and Dissertation Workshop

--- a/registration-draft.html
+++ b/registration-draft.html
@@ -111,7 +111,7 @@
 											</table>
 										</div>
 										<p>
-											Each accepted paper (Research, Demo, Industry, Workshop, or Tutorial) must be covered by <span style="font-weight: bold;">one Regular registration</span>, even if it is presented by a student.
+											Each accepted paper (Research, Demo, Industry, Thesis and Dissertation Workshop, or Tutorial) must be covered by <span style="font-weight: bold;">one Regular registration</span>, even if it is presented by a student.
 											Authors with <span style="font-weight: bold;">multiple accepted papers</span> must complete <span style="font-weight: bold;">a separate registration for each paper</span>.
 										</p>
 										<p>
