--- a/program.html
+++ b/program.html
@@ -91,8 +91,9 @@
 						</div>
 						<div class="col-10 col-12-narrow">
 							<section>
-								<h3>Keynote 1 &ndash; Hirozumi Yamaguchi (Osaka University)</h3>
+								<h3>Keynote 1</h3>
 									<p align="justify">
+										<span style="font-weight: bold;">Speaker:</span> Hirozumi Yamaguchi (Osaka University)
 									</p>
 									<p align="justify">
 										<span style="font-weight: bold;">Biography:</span> <a href="https://mc.net.ist.osaka-u.ac.jp/people/h-yamagu/" target="_blank"><b>Hirozumi Yamaguchi </b></a> 
@@ -127,8 +128,13 @@ large-scale digital twin research team.
 						</div>
 						<div class="col-10 col-12-narrow">
 							<section>
-								<h3>Keynote 2 &ndash; Xing XIE (Microsoft Research Asia)</h3>
+								<h3>Keynote 2 &ndash; Mapping Cultural Values Across Regions for AI Alignment</h3>
+								<p align="justify">
+										<span style="font-weight: bold;">Speaker: </span>  Xing Xie (Microsoft Research Asia)
+									</p>
 									<p align="justify">
+										<span style="font-weight: bold;">Abstract:</span> 
+										 As large language models become deeply integrated into societies worldwide, ensuring that their behaviors align with diverse human values has emerged as a critical challenge. Cultural values often vary significantly across geographic regions, reflecting local histories, traditions, and social norms. In this talk, I will share our interdisciplinary research on identifying and evaluating these regional cultural differences, and how we assess AI systems’ ability to respect and adapt to them. By collaborating with social science researchers, we aim to advance culturally aware and globally responsible AI. I hope this talk will inspire dialogue on the role of regional cultural diversity in shaping the future of AI systems.
 									</p>
 									<p align="justify">
 										<span style="font-weight: bold;">Biography:</span> <a href="https://www.microsoft.com/en-us/research/people/xingx/" target="_blank"><b>Dr. Xing Xie</b></a> 
