--- a/program_full_detail.html
+++ b/program_full_detail.html
@@ -70,7 +70,7 @@
 					<h2>Conference Program</h2>
 					<h3>Coming soon...</h3>
 					<p>
-						The detailed program of SSTD 2025 will be available closer to the conference date. Please check back later!
+						The detailed program of SSTD 2025 will be available closer to the conference date. Please come back to check later!
 					</p>
 				</div>
 			</header>
