ui fix: header max height, nav height

--- a/keynotes.html
+++ b/keynotes.html
@@ -40,7 +40,7 @@
 
 
 		<!-- Header -->
-		<section id="header" class="dark">
+		<section id="header" class="dark" style="max-height: 100px;">
 		<div class="content">
 			<div class="container">
 				<div class="row">
