--- a/awards.html
+++ b/awards.html
@@ -64,20 +64,42 @@
 
 
 		<!-- Conference Program -->
-		
+		<!--
 		<section id="program" class="main">
 			<header>
 				<div class="container">
 					<h2>Conference Program</h2>
 					<h3>Coming soon...</h3>
-					<p>
-						The detailed program of SSTD 2025 will be available closer to the conference date. Please come back to check later!
-					</p>
 				</div>
 			</header>
 			
 			</section>
-		
+		-->
+		<!-- Awards -->
+		<section id="awards" class="main">
+			<header>
+				<div class="container">
+					<h2>Awards</h2>
+				</div>
+			</header>
+			<div class="content style4">
+				<div class="container">
+					<div class="row">
+						<div class="col-12 col-12-narrow">
+							<section>
+								<header><h4>SSTD 2025 10-Year Impact Award</h4></header>
+			            				<p>
+			            		
+<span style="font-weight: bold;">Oriented Online Route Recommendation for Spatial Crowdsourcing Task Workers</span><br>
+			Yu Li, Man Lung Yiu, Wenjian Xu<br>
+SSTD 2015<br>
+
+							</section>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 		
 		<!-- Footer -->
 			<section id="footer">
