--- a/tutorials.html
+++ b/tutorials.html
@@ -33,6 +33,7 @@
 				<li><a href="keynotes.html">Keynotes</a></li>
 				<li><a href="papers.html">Accepted Papers</a></li>
 				<li><a href="tutorials.html">Accepted Tutorials</a></li>
+				<li><a href="awards.html">Awards</a></li>
 			</ul>
 		</nav>
 
