add link to registration site

--- a/registration-draft.html
+++ b/registration-draft.html
@@ -73,7 +73,7 @@
 											Please proceed to our official registration page. Click the link below to secure your spot and be a part of this groundbreaking event.
 										</p>
 										<p style="text-align: center; margin: 1em 0; font-size: 1.1em;">
-											<a href="#" style="color: #4078c0; font-weight: bold;">Proceed to Registration (LINK) 🔗</a>
+											<a href="https://smartconf.jp/auth/entry/SSTD2025" target="_blank" style="color: #4078c0; font-weight: bold;">Proceed to Registration (LINK) 🔗</a>
 										</p>
 									</section>
 									
@@ -116,7 +116,7 @@
 										</div>
 										<p>
 											Each accepted paper (Research, Demo, Industry, Thesis and Dissertation Workshop, or Tutorial) must be covered by <span style="font-weight: bold;">one Author registration</span>, even if it is presented by a student.
-											Authors with <span style="font-weight: bold;">multiple accepted papers</span> must complete <span style="font-weight: bold;">a separate registration for each paper</span>.
+											Authors with <span style="font-weight: bold;">multiple accepted papers</span> must complete <span style="font-weight: bold;">a separate registration for each paper</span> where each separate registration should come from one system account (with one unique email). For example, if you have two registrations, you have to register two system accounts for the system with two email addresses so that you have two different accounts for two registrations separately.
 										</p>
 										<p>
 											<span style="font-weight: bold;">** All registration types include admission to technical sessions, Welcome Reception (August 25), Lunches, Refreshments during Breaks, Banquet (August 26) and Osaka Expo tour (August 27).</span>
