remove draft text

--- a/registration.html
+++ b/registration.html
@@ -61,7 +61,7 @@
 				<section id="registration" class="main">
 					<header>
 						<div class="container">
-							<h2>Registration <span style="color: #ff6b6b; font-size: 0.7em;">(Draft - Not Final)</span></h2>
+							<h2>Registration</h2>
 						</div>
 					</header>
 					<div class="content style4">
