--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 				<div class="row">
 					<div class="col-5 col-12">
 						<ul>
+							<li>(07.07.2025) Registration is now open! Early registration until July 15, 2025 (AoE): <a href="./registration.html">Registration Page</a></li>
 							<li>(03.07.2025) Accepted tutorials are now available: <a href="./tutorials.html">Accepted Tutorials</a></li>
 							<li>(30.06.2025) Accepted papers are now available: <a href="./papers.html">Accepted Papers</a></li>
 							<li>(30.05.2025) Extended the submission deadline for <a href="./callThesis.html">Thesis and Dissertation Workshop track</a>: <span style="font-weight: bold;">June 7, 2025</span> (AoE)</li>
