--- a/awards.html
+++ b/awards.html
@@ -87,15 +87,23 @@
 					<div class="row">
 						<div class="col-12 col-12-narrow">
 							<section>
-								<header><h4>SSTD 2025 10-Year Impact Award</h4></header>
+								<header><h3>SSTD 2025 10-Year Impact Award</h3></header>
 			            				<p>
 			            		
 <span style="font-weight: bold;">Oriented Online Route Recommendation for Spatial Crowdsourcing Task Workers</span><br>
 			Yu Li, Man Lung Yiu, Wenjian Xu<br>
-SSTD 2015<br>
-
+SSTD 2015<br><br>
 							</section>
 						</div>
+						<div class="col-12 col-12-narrow">
+							<section>
+								<header><h3>SSTD 2025 Service Award</h3></header>
+			            				<p>
+			            		
+Shashi Shekhar (University of Minnesota)<br>
+							</section>
+						</div>
+
 					</div>
 				</div>
 			</div>
