update hamada aff

--- a/officers.html
+++ b/officers.html
@@ -75,7 +75,7 @@
 										<header><h4>General Co-chairs</h4></header>
 			            				<p>
 											<a href="https://www.cse.ust.hk/~raywong/" target="_blank">Raymond Chi-Wing Wong</a> (The Hong Kong University of Science and Technology, Hong Kong)<br>
-											<a href="https://hamada-rizk.com/" target="_blank">Hamada Rizk</a> (Osaka University, Japan) <br>
+											<a href="https://hamada-rizk.com/" target="_blank">Hamada Rizk</a> (The University of Osaka, Japan; RIKEN Center for Computational Science, Japan) <br>
 										</p>
                                         <br/>
                                      
