--- a/officers.html
+++ b/officers.html
@@ -75,7 +75,7 @@
 										<header><h4>General Co-chairs</h4></header>
 			            				<p>
 											<a href="https://www.cse.ust.hk/~raywong/" target="_blank">Raymond Chi-Wing Wong</a> (The Hong Kong University of Science and Technology, Hong Kong)<br>
-											<a href="https://hamada-rizk.com/" target="_blank">Hamada Rizk</a> (The University of Osaka, Japan; RIKEN Center for Computational Science, Japan) <br>
+											<a href="https://hamada-rizk.com/" target="_blank">Hamada Rizk</a> (The University of Osaka; RIKEN Center for Computational Science, Japan) <br>
 										</p>
                                         <br/>
                                      
@@ -105,14 +105,14 @@
 
 										<header><h4>Local Arrangements Co-chairs</h4></header>
 										<p>
-											<a href="https://www.ist.osaka-u.ac.jp/english/researcher/detail.php?id=114" target="_blank">Akihito Hiromori</a> (Osaka University, Japan) <br>
+											<a href="https://www.ist.osaka-u.ac.jp/english/researcher/detail.php?id=114" target="_blank">Akihito Hiromori</a> (The University of Osaka, Japan) <br>
 											<a href="https://hirokiyoshikawa.github.io/profile/" target="_blank">Hiroki Kudo</a> (Kyoto Tachibana University, Japan) <br>
 										</p>
                                         <br/>
                                         <header><h4>Webmasters</h4></header>
                                         <p>
 											<a href="https://harryckh.github.io/" target="_blank">Harry Kai-Ho Chan</a> (The University of Sheffield, United Kingdom) <br>
-											<a href="https://mc.net.ist.osaka-u.ac.jp/people/t-amano/" target="_blank">Tatsuya Amano </a> (Osaka University, Japan) <br>
+											<a href="https://mc.net.ist.osaka-u.ac.jp/people/t-amano/" target="_blank">Tatsuya Amano </a> (The University of Osaka, Japan) <br>
                                         </p>
                                         <br/>
                                         <header><h4>Registration Chair</h4></header>
@@ -125,7 +125,7 @@
                                         <header><h4>Proceedings Chair</h4></header>
 										<p>
 											<a href="https://itachiuchihavictor.github.io/" target="_blank">Victor Junqiu Wei</a> (The Hong Kong University of Science and Technology, Hong Kong)  <br>
-											<a href="https://utiyama.github.io/" target="_blank">Akira Uchiyama</a> (Osaka University, Japan) <br>
+											<a href="https://utiyama.github.io/" target="_blank">Akira Uchiyama</a> (The University of Osaka, Japan) <br>
 										</p>
 										<br/>
 										<header><h4>Theses and Dissertations Workshop</h4></header>
@@ -159,7 +159,7 @@
                                         <header><h4>Sponsorship Chair</h4></header>
                                         <p>
 											<a href="https://takuroyonezawa.info/" target="_blank">Takuro Yonezawa</a> (Nagoya University, Japan)<br>
-											<a href="https://amagata-daichi.notion.site/Welcome-to-Daichi-Amagata-s-Homepage-9d42f7292ccf40279f00eced2e941590" target="_blank">Daichi Amagata</a> (Osaka University, Japan)<br>
+											<a href="https://amagata-daichi.notion.site/Welcome-to-Daichi-Amagata-s-Homepage-9d42f7292ccf40279f00eced2e941590" target="_blank">Daichi Amagata</a> (The University of Osaka, Japan)<br>
                                         </p>
                                         <br/>
                                         
