--- a/keynotes.html
+++ b/keynotes.html
@@ -93,9 +93,30 @@
 						</div>
 						<div class="col-10 col-12-narrow">
 							<section>
-								<h3>Keynote 1</h3>
+								<h4>Keynote 1 - Engineering the Digital Twin Society: Harnessing Spatiotemporal Data through AI</h4>
 									<p align="justify">
 										<span style="font-weight: bold;">Speaker:</span> Hirozumi Yamaguchi (Osaka University)
+									</p>
+									<p align="justify">
+										<span style="font-weight: bold;">Abstract:</span> 
+										Regional communities face pressing challenges such as aging populations,
+declining mobility, rural depopulation, over-tourism, and the urgent
+need for disaster-resilient infrastructure. Embedded within these issues
+is a rich layer of spatiotemporal data that can help design smarter and
+more sustainable societies if it is effectively harnessed. To address
+these challenges, advances in sensors, IoT, and AI technologies now
+provide the tools to collect, integrate, and interpret this data at
+scale. Furthermore, the concept of regional digital twins, which refers
+to virtual models of real-world communities, is rapidly emerging as a
+foundation for future-oriented planning, simulation, and policy-making.
+This talk explores how spatiotemporal data, gathered through multimodal
+sensing technologies, is powering new forms of regional intelligence. It
+highlights how AI, IoT, and mobile and pervasive computing are
+transforming our ability to understand and shape the dynamics of place
+and society. Drawing from real-world efforts, including national
+projects funded by JST and NICT, the speaker will share emerging
+approaches and practical applications that are helping to engineer the
+digital twin society.
 									</p>
 									<p align="justify">
 										<span style="font-weight: bold;">Biography:</span> <a href="https://mc.net.ist.osaka-u.ac.jp/people/h-yamagu/" target="_blank"><b>Hirozumi Yamaguchi </b></a> 
@@ -130,7 +151,7 @@ large-scale digital twin research team.
 						</div>
 						<div class="col-10 col-12-narrow">
 							<section>
-								<h3>Keynote 2 &ndash; Mapping Cultural Values Across Regions for AI Alignment</h3>
+								<h4>Keynote 2 &ndash; Mapping Cultural Values Across Regions for AI Alignment</h4>
 								<p align="justify">
 										<span style="font-weight: bold;">Speaker: </span>  Xing Xie (Microsoft Research Asia)
 									</p>
