--- a/officers.html
+++ b/officers.html
@@ -91,7 +91,7 @@
 										<header><h4>Industry and Demo Tracks Co-chairs</h4></header>
 										<p>
 											
-											<a href="https://www.aamircheema.com/" target="_blank">Muhammad Amir Cheema</a> (Monash University, Australia) <br>
+											<a href="https://www.aamircheema.com/" target="_blank">Muhammad Aamir Cheema</a> (Monash University, Australia) <br>
 											<a href="https://www.unimi.it/en/ugov/person/fatme-hachem" target="_blank">Fatme Hachem</a> (University of Milan, Italy) <br>											
 										</p>
                                         <br/>
