--- a/officers.html
+++ b/officers.html
@@ -124,7 +124,7 @@
                                         <br/>
                                         <header><h4>Proceedings Chair</h4></header>
 										<p>
-											<a href="https://itachiuchihavictor.github.io/" target="_blank">Victor Junqiu Wei</a> (The Hong Kong University of Science and Technology, Hong Kong)  <br>
+											<a href="https://sites.google.com/view/victor-junqiu-wei" target="_blank">Victor Junqiu Wei</a> (The Hong Kong University of Science and Technology, Hong Kong)  <br>
 											<a href="https://utiyama.github.io/" target="_blank">Akira Uchiyama</a> (The University of Osaka, Japan) <br>
 										</p>
 										<br/>
