add university sponsors

--- a/index.html
+++ b/index.html
@@ -16,8 +16,12 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 		/* Mobile-specific styles for sponsor logos */
 		@media screen and (max-width: 736px) {
 			.sponsor-logos img {
-				min-height: 30px !important;
+				max-height: 40px !important;
 			}
+		}
+		/* Remove underlines from sponsor logo links */
+		.sponsor-logos a {
+			border-bottom: none !important;
 		}
 	</style>
 </head>
@@ -187,10 +191,32 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 					<div class="col-12" style="text-align: center;">
 						<div class="sponsor-logos" style="display: flex; flex-wrap: wrap; justify-content: center; align-items: center; gap: 40px;">
 							<a href="https://www.lycorp.co.jp/en/" target="_blank" rel="noopener noreferrer" style="display: inline-block;">
-								<img src="images/LY_Corporation_Wordmark_Black_RGB.png" alt="LY Corporation" style="max-width: 300px; min-height: 15px; display: block;">
+								<img src="images/LY_Corporation_Wordmark_Black_RGB.png" alt="LY Corporation" style="max-height: 85px; width: auto; display: block;">
 							</a>
 							<a href="https://www.miraxia.com/" target="_blank" rel="noopener noreferrer" style="display: inline-block;">
-								<img src="images/MIRAXIA_CC.png" alt="Miraxia Edge Technology" style="max-width: 300px; min-height: 15px; display: block;">
+								<img src="images/MIRAXIA_CC.png" alt="Miraxia Edge Technology" style="max-height: 170px; padding-bottom: 16px; width: auto; display: block;">
+							</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<!-- University Sponsor -->
+	<section id="university-sponsor" class="main">
+		<header>
+			<div class="container">
+				<h2>University Sponsor</h2>
+			</div>
+		</header>
+		<div class="content style4">
+			<div class="container">
+				<div class="row">
+					<div class="col-12" style="text-align: center;">
+						<div class="sponsor-logos" style="display: flex; flex-wrap: wrap; justify-content: center; align-items: center; gap: 40px;">
+							<a href="https://www.osaka-u.ac.jp/en" target="_blank" rel="noopener noreferrer" style="display: inline-block;">
+								<img src="images/TheUniversityOfOsaka_Logo.png" alt="The University of Osaka" style="max-height: 50px; width: auto; display: block;">
 							</a>
 						</div>
 					</div>
