--- a/papers.html
+++ b/papers.html
@@ -34,6 +34,7 @@
 				<li><a href="papers.html">Accepted Papers</a></li>
 				<li><a href="tutorials.html">Accepted Tutorials</a></li>
 				<li><a href="awards.html">Awards</a></li>
+				<li><a href="panel.html">Panel</a></li>
 			</ul>
 		</nav>
 
