--- a/panel.html
+++ b/panel.html
@@ -92,13 +92,27 @@
 								<h3 class="paper-title">My Classic Papers in Spatial and Spatiotemporal Data</h3>
 			            				
 			            				<br><span style="font-weight: bold;">Panel Moderator:</span> Ki-Joune Li(Pusan National University)
-<br>
+
 <br><span style="font-weight: bold;">Panel Members:</span>
 <ul> <li>Shashi Shekhar (University of Minnesota)</li>
 <li>Hua Lu (Aalborg University)</li>
 <li>Ken Man Lung Yiu (Hong Kong Polytechnic University)</li>
 <li>Amr Magdy (University of California, Riverside)</li>
 </ul>
+<span style="font-weight: bold;">Abstract:</span>
+<p>
+Since the emergence of the spatial data research community in the 1980s and
+the first SSD held in Santa Barbara, USA, in 1989, the field of spatial and spatiotemporal data
+has grown rapidly. It has become a major area within the broader database research community
+and has provided the technical foundation for various application domains, including GIS, LBS,
+and Digital Twins. More recently, the integration of data science and artificial intelligence has
+further highlighted the field’s importance in shaping future technologies.
+Now is a meaningful time to reflect on the academic history of the SSD community.
+As part of this effort, it is both interesting and worthwhile to discuss which papers—among
+the many published in our field—are the most significant, the most influential on our own research,
+or perhaps even considered classics in the SSD and SSTD domain. To this end, in this Panel Session,
+we have invited globally recognized scholars from the SSD and SSTD communities to share their insights
+under the theme: "My Classic Papers in Spatial and Spatiotemporal Data."
 			            			</p>
 							</section>
 						</div>
@@ -175,4 +189,4 @@
 
 	</body>
 </html>
-										<p>
+										
