detailed program draft

--- a/keynotes.html
+++ b/keynotes.html
@@ -80,13 +80,13 @@
 		<section id="keynotes" class="main">
 			<header>
 				<div class="container">
-					<h2>Keynotes</h2>
+					<h2 id="keynote1">Keynotes</h2>
 				</div>
 			</header>
 			<div class="content style4">
 				<div class="container">
 			
-				<div class="row">
+				<div class="row" >
 						<div class="col-2 col-12-narrow">
 							<section style="text-align: center;">
 								<img src="images/keynote-yamaguchi-2024.jpg" style="width:100%; max-width: 300px; margin-top:10px; margin-bottom:12px;">
@@ -137,13 +137,14 @@ utilization, and privacy.
 In 2018, he was honored with the Commendation for Science and Technology by the
 Minister of Education, Culture, Sports, Science, and Technology. Since 2024, he
 has also been serving concurrently as the team leader for RIKEN R-CCS's
-large-scale digital twin research team.
+large-scale digital twin research team.				<a id="keynote2"></a>	
 									</p> 
 							</section>
 
 					</div>
 					</div>
-				<div class="container content style4" style="padding-top: 4em;">
+
+				<div class="container content style4" style="padding-top: 4em;" >
 					<div class="row">
 						<div class="col-2 col-12-narrow">
 							<section style="text-align: center;">
