--- a/panel.html
+++ b/panel.html
@@ -77,9 +77,9 @@
 			</section>
 		-->
 		<!-- Awards -->
-		<section id="awards" class="main">
+		<section id="awards" class="main" >
 			<header>
-				<div class="container">
+				<div class="container"id="panel1">
 					<h2>Panel</h2>
 				</div>
 			</header>
