--- a/program_full_detail_draft.html
+++ b/program_full_detail_draft.html
@@ -415,7 +415,7 @@ Aaditya Mukherjee (University of Victoria); Sean Chester (University of Victoria
     </tr>
     <tr class="default">
       <td class="time-column">13:05-14:05</td>
-      <td class="session-column"><span class="session-title">Session 6 - Time Series and Interval Data</span><br>Session chair: TBC</td>
+      <td class="session-column"><span class="session-title">Session 6 - Time Series and Interval Data</span><br/>Session chair: TBC</td>
       <td class="details-column">
         <span class="long-paper">ReefsDB: An Efficient Design and Implementation of Time-Series Store on SSDs</span>  Shuai Liu (The Institute of Software, Chinese Academy of Sciences (ISCAS)); Ying Qiao (The Institute of Software, Chinese Academy of Sciences (ISCAS)); Chang Leng (The Institute of Software, Chinese Academy of Sciences (ISCAS)); Hongan Wang (The Institute of Software, Chinese Academy of Sciences (ISCAS)) - LONG
         <span class="long-paper">TIDE: Indexing Time Intervals by Duration and Endpoint</span> Kai Wang (HKUST); Moin Moti (HKUST); Dimitris Papadias (HKUST) - LONG
